--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Password Generator</title>
     <link rel="stylesheet" href="./Assets/style.css" />
-    <script type="text/javascript" src="script.js"></script>
+    <!-- <script type="text/javascript" src="script.js"></script> -->
   </head>
   <body>
     <div class="wrapper">
@@ -26,6 +26,7 @@
           ></textarea>
         </div>
         <div >
+          
           <form>
             <label for="passLenghth">Password lenghth (between 5 to 128)</label>
             <input type="number" id="passLenght" name="passLenght" value="5" min="5" max="128" required style="width: 50px;">
@@ -40,8 +41,8 @@
               <input type="checkbox" id="passspecial" name="passspecial" value="false" onchange="if(this.checked) this.value='true'; else this.value='false';">
               <label for="passspecial">Special characters</label>
             </div>
-            <input type="submit" id="generate" class="btn" onclick="writePassword()" value="Generate Password">
           </form>
+          <button style="float: right;margin-top: -7%;" id="generate" class="btn" value="Generate Password"> Generate Password</button>
         </div>
       </div>
     </div>
